# labs

./: .gitignore  CMakeLists.txt  Polynomial.cpp  Polynomial.h  main.cpp
Polynomial_lib/: CMakeLists.txt  List.h  Polynomial.cpp  Polynomial.h  PolynomialExp.cpp  PolynomialExp.h  PolynomialQueue.cpp  PolynomialQueue.h  PolynomialString.cpp  PolynomialString.h  Queue.h  Queue.inl
Test/: CMakeLists.txt  test1.cpp  test2.cpp  test4_1.cpp  test4_2.cpp  test5.cpp  test7.cpp
Test2/: CMakeLists.txt  catch_amalgamated.cpp  catch_amalgamated.hpp  test3.cpp  test4_1.cpp  test4_2.cpp  test5.cpp  test7.cpp
Test2/old/: Test2.h  test.cpp
Tests/: Test2.cpp  test.cpp  test.h
